# cs_agents

./: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  start_api.sh  start_whatsapp_api.sh
frontend/: README.md  index.html  serve.py
resources/: car_stock.json  kavak_knowledge_base.txt
src/agentic_approach/: main.py  whatsapp_api.py
src/api/: main.py  models.py
src/bot/: main.py  models.py  util.py
src/kavak_bot/: __init__.py  util.py
src/kavak_bot/agents/: common.py  marketing_agent.py  sales_agent.py  triage_agent.py
src/kavak_bot/models/: agent.py  response.py
